src/main/gen/de/joachimsohn/cds/parser/CDSParser.java
// This is a generated file. Not intended for manual editing.
package de.joachimsohn.cds.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;

import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import static de.joachimsohn.cds.psi.CDSTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CDSParser implements PsiParser, LightPsiParser {

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  /* ********************************************************** */
  // Datatypes [Datatype_Enum]
  static boolean Datatype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Datatypes(b, l + 1);
    r = r && Datatype_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [Datatype_Enum]
  private static boolean Datatype_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_1")) return false;
    Datatype_Enum(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // T_LPAREN literal_number T_RPAREN
  static boolean Datatype_Argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Argument")) return false;
    if (!nextTokenIs(b, T_LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_LPAREN);
    r = r && literal_number(b, l + 1);
    r = r && consumeToken(b, T_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // T_LPAREN literal_number T_COMMA  literal_number T_RPAREN
  static boolean Datatype_Argument_Decimal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Argument_Decimal")) return false;
    if (!nextTokenIs(b, T_LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_LPAREN);
    r = r && literal_number(b, l + 1);
    r = r && consumeToken(b, T_COMMA);
    r = r && literal_number(b, l + 1);
    r = r && consumeToken(b, T_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KW_ENUM T_LBRACE (identifier (Datatype_Enum_assignment)? T_SEMI)+ T_RBRACE
  static boolean Datatype_Enum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum")) return false;
    if (!nextTokenIs(b, KW_ENUM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_ENUM, T_LBRACE);
    r = r && Datatype_Enum_2(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (identifier (Datatype_Enum_assignment)? T_SEMI)+
  private static boolean Datatype_Enum_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Datatype_Enum_2_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!Datatype_Enum_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Datatype_Enum_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // identifier (Datatype_Enum_assignment)? T_SEMI
  private static boolean Datatype_Enum_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && Datatype_Enum_2_0_1(b, l + 1);
    r = r && consumeToken(b, T_SEMI);
    exit_section_(b, m, null, r);
    return r;
  }

  // (Datatype_Enum_assignment)?
  private static boolean Datatype_Enum_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum_2_0_1")) return false;
    Datatype_Enum_2_0_1_0(b, l + 1);
    return true;
  }

  // (Datatype_Enum_assignment)
  private static boolean Datatype_Enum_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Datatype_Enum_assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // T_ASSIGN (literal_string | literal_number | literal_boolean)
  static boolean Datatype_Enum_assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum_assignment")) return false;
    if (!nextTokenIs(b, T_ASSIGN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_ASSIGN);
    r = r && Datatype_Enum_assignment_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // literal_string | literal_number | literal_boolean
  private static boolean Datatype_Enum_assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatype_Enum_assignment_1")) return false;
    boolean r;
    r = literal_string(b, l + 1);
    if (!r) r = literal_number(b, l + 1);
    if (!r) r = literal_boolean(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // 'Boolean'
  //             | 'Integer'
  //             | 'Integer64'
  //             | 'Decimal' [Datatype_Argument_Decimal]
  //             | 'Double'
  //             | 'Date'
  //             | 'Time'
  //             | 'DateTime'
  //             | 'String' [Datatype_Argument]
  //             | 'Binary' [Datatype_Argument]
  //             | 'LargeBinary'
  //             | 'LargeString'
  //             | entity_identifier
  //             | type_identifier
  public static boolean Datatypes(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATATYPES, "<datatypes>");
    r = consumeToken(b, "Boolean");
    if (!r) r = consumeToken(b, "Integer");
    if (!r) r = consumeToken(b, "Integer64");
    if (!r) r = Datatypes_3(b, l + 1);
    if (!r) r = consumeToken(b, "Double");
    if (!r) r = consumeToken(b, "Date");
    if (!r) r = consumeToken(b, "Time");
    if (!r) r = consumeToken(b, "DateTime");
    if (!r) r = Datatypes_8(b, l + 1);
    if (!r) r = Datatypes_9(b, l + 1);
    if (!r) r = consumeToken(b, "LargeBinary");
    if (!r) r = consumeToken(b, "LargeString");
    if (!r) r = entity_identifier(b, l + 1);
    if (!r) r = type_identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'Decimal' [Datatype_Argument_Decimal]
  private static boolean Datatypes_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "Decimal");
    r = r && Datatypes_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [Datatype_Argument_Decimal]
  private static boolean Datatypes_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes_3_1")) return false;
    Datatype_Argument_Decimal(b, l + 1);
    return true;
  }

  // 'String' [Datatype_Argument]
  private static boolean Datatypes_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "String");
    r = r && Datatypes_8_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [Datatype_Argument]
  private static boolean Datatypes_8_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes_8_1")) return false;
    Datatype_Argument(b, l + 1);
    return true;
  }

  // 'Binary' [Datatype_Argument]
  private static boolean Datatypes_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes_9")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "Binary");
    r = r && Datatypes_9_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [Datatype_Argument]
  private static boolean Datatypes_9_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Datatypes_9_1")) return false;
    Datatype_Argument(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // [Namespace] import_* RootItems
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = File_0(b, l + 1);
    r = r && File_1(b, l + 1);
    r = r && RootItems(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [Namespace]
  private static boolean File_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File_0")) return false;
    Namespace(b, l + 1);
    return true;
  }

  // import_*
  private static boolean File_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!import_(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KW_NAMESPACE PropertyPath T_SEMI
  public static boolean Namespace(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Namespace")) return false;
    if (!nextTokenIs(b, KW_NAMESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KW_NAMESPACE);
    r = r && PropertyPath(b, l + 1);
    r = r && consumeToken(b, T_SEMI);
    exit_section_(b, m, NAMESPACE, r);
    return r;
  }

  /* ********************************************************** */
  // id (T_DOT id)*
  static boolean PropertyPath(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "PropertyPath")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && PropertyPath_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (T_DOT id)*
  private static boolean PropertyPath_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "PropertyPath_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!PropertyPath_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "PropertyPath_1", c)) break;
    }
    return true;
  }

  // T_DOT id
  private static boolean PropertyPath_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "PropertyPath_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, T_DOT, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // annotation ( model_ | service_ )*
  public static boolean RootItems(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "RootItems")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ROOT_ITEMS, "<root items>");
    r = annotation(b, l + 1);
    r = r && RootItems_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( model_ | service_ )*
  private static boolean RootItems_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "RootItems_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!RootItems_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "RootItems_1", c)) break;
    }
    return true;
  }

  // model_ | service_
  private static boolean RootItems_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "RootItems_1_0")) return false;
    boolean r;
    r = model_(b, l + 1);
    if (!r) r = service_(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // KW_ACTIONS T_LBRACE (method_ T_SEMI)* T_RBRACE
  static boolean actions_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions_")) return false;
    if (!nextTokenIs(b, KW_ACTIONS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_ACTIONS, T_LBRACE);
    r = r && actions__2(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (method_ T_SEMI)*
  private static boolean actions__2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions__2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!actions__2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actions__2", c)) break;
    }
    return true;
  }

  // method_ T_SEMI
  private static boolean actions__2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actions__2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = method_(b, l + 1);
    r = r && consumeToken(b, T_SEMI);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // annotation_entry*
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION, "<annotation>");
    while (true) {
      int c = current_position_(b);
      if (!annotation_entry(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotation", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // KW_ASSERT T_DOT (annotation_assert_unique | annotation_assert_integrity | annotation_assert_format | annotation_assert_range | annotation_assert_notnull)
  static boolean annotation_assert(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert")) return false;
    if (!nextTokenIs(b, KW_ASSERT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_ASSERT, T_DOT);
    r = r && annotation_assert_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // annotation_assert_unique | annotation_assert_integrity | annotation_assert_format | annotation_assert_range | annotation_assert_notnull
  private static boolean annotation_assert_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_2")) return false;
    boolean r;
    r = annotation_assert_unique(b, l + 1);
    if (!r) r = annotation_assert_integrity(b, l + 1);
    if (!r) r = annotation_assert_format(b, l + 1);
    if (!r) r = annotation_assert_range(b, l + 1);
    if (!r) r = annotation_assert_notnull(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // KW_FORMAT T_COLON stringlit T_COLON
  static boolean annotation_assert_format(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_format")) return false;
    if (!nextTokenIs(b, KW_FORMAT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_FORMAT, T_COLON, STRINGLIT, T_COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KW_INTEGRITY T_COLON literal_boolean
  static boolean annotation_assert_integrity(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_integrity")) return false;
    if (!nextTokenIs(b, KW_INTEGRITY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_INTEGRITY, T_COLON);
    r = r && literal_boolean(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KW_NOTNULL T_COLON literal_boolean
  static boolean annotation_assert_notnull(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_notnull")) return false;
    if (!nextTokenIs(b, KW_NOTNULL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_NOTNULL, T_COLON);
    r = r && literal_boolean(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KW_RANGE T_COLON (T_LBRACK ( literal_number | R_DATE ) T_RBRACK | Datatype_Enum) T_COLON
  static boolean annotation_assert_range(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_range")) return false;
    if (!nextTokenIs(b, KW_RANGE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_RANGE, T_COLON);
    r = r && annotation_assert_range_2(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // T_LBRACK ( literal_number | R_DATE ) T_RBRACK | Datatype_Enum
  private static boolean annotation_assert_range_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_range_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = annotation_assert_range_2_0(b, l + 1);
    if (!r) r = Datatype_Enum(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // T_LBRACK ( literal_number | R_DATE ) T_RBRACK
  private static boolean annotation_assert_range_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_range_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_LBRACK);
    r = r && annotation_assert_range_2_0_1(b, l + 1);
    r = r && consumeToken(b, T_RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // literal_number | R_DATE
  private static boolean annotation_assert_range_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_range_2_0_1")) return false;
    boolean r;
    r = literal_number(b, l + 1);
    if (!r) r = consumeToken(b, R_DATE);
    return r;
  }

  /* ********************************************************** */
  // KW_UNIQUE T_COLON T_LBRACE annotation_assert_unique_field (T_COMMA annotation_assert_unique_field)* T_RBRACE
  static boolean annotation_assert_unique(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_unique")) return false;
    if (!nextTokenIs(b, KW_UNIQUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_UNIQUE, T_COLON, T_LBRACE);
    r = r && annotation_assert_unique_field(b, l + 1);
    r = r && annotation_assert_unique_4(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (T_COMMA annotation_assert_unique_field)*
  private static boolean annotation_assert_unique_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_unique_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation_assert_unique_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotation_assert_unique_4", c)) break;
    }
    return true;
  }

  // T_COMMA annotation_assert_unique_field
  private static boolean annotation_assert_unique_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_unique_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COMMA);
    r = r && annotation_assert_unique_field(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // entity_field_identifier T_COLON T_LBRACK identifier (T_COMMA identifier)* T_RBRACK
  static boolean annotation_assert_unique_field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_unique_field")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = entity_field_identifier(b, l + 1);
    r = r && consumeTokens(b, 0, T_COLON, T_LBRACK);
    r = r && identifier(b, l + 1);
    r = r && annotation_assert_unique_field_4(b, l + 1);
    r = r && consumeToken(b, T_RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // (T_COMMA identifier)*
  private static boolean annotation_assert_unique_field_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_unique_field_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation_assert_unique_field_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotation_assert_unique_field_4", c)) break;
    }
    return true;
  }

  // T_COMMA identifier
  private static boolean annotation_assert_unique_field_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_assert_unique_field_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COMMA);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
